environment should not be part of library.

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/fontawesome.min.css">
+    <script src="/environment.js"></script>
     <title>Helplightning Contacts</title>
   </head>
   <body>
