--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/fontawesome.min.css">
+    <script src="https://kit.fontawesome.com/3dc89a410d.js" crossorigin="anonymous"></script>
     <script src="/environment.js"></script>
     <title>Helplightning Contacts</title>
   </head>
